// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entropy component matches the snapshot when drawn upon and insufficient entropy 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "rgb(5, 5, 13)",
      "padding": 0,
    }
  }
>
  <CenteredText
    msg="50 %"
    style={
      Array [
        Object {
          "color": "rgb(255, 239, 223)",
          "fontFamily": "TT Commons",
          "fontSize": 20,
          "paddingHorizontal": 50,
          "position": "absolute",
          "top": "20%",
        },
        Object {
          "fontSize": 42,
        },
      ]
    }
  />
  <Block>
    <MaskedImageComponent
      addPoint={[Function]}
      disabled={false}
    />
  </Block>
  <View
    style={
      Object {
        "bottom": "5%",
        "position": "absolute",
      }
    }
  />
</Container>
`;

exports[`Entropy component matches the snapshot when not drawn upon and insufficient entropy 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "rgb(5, 5, 13)",
      "padding": 0,
    }
  }
>
  <CenteredText
    msg="For security purposes, we need some randomness. Please tap the screen and draw on it randomly"
    style={
      Object {
        "color": "rgb(255, 239, 223)",
        "fontFamily": "TT Commons",
        "fontSize": 20,
        "paddingHorizontal": 50,
        "position": "absolute",
        "top": "20%",
      }
    }
  />
  <Block>
    <MaskedImageComponent
      addPoint={[Function]}
      disabled={false}
    />
  </Block>
  <View
    style={
      Object {
        "bottom": "5%",
        "position": "absolute",
      }
    }
  />
</Container>
`;

exports[`Entropy component matches the snapshot with when drawn upon and sufficient entropy 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "rgb(5, 5, 13)",
      "padding": 0,
    }
  }
>
  <CenteredText
    msg="100 %"
    style={
      Array [
        Object {
          "color": "rgb(255, 239, 223)",
          "fontFamily": "TT Commons",
          "fontSize": 20,
          "paddingHorizontal": 50,
          "position": "absolute",
          "top": "20%",
        },
        Object {
          "fontSize": 42,
        },
      ]
    }
  />
  <Block>
    <MaskedImageComponent
      addPoint={[Function]}
      disabled={true}
    />
  </Block>
  <View
    style={
      Object {
        "bottom": "5%",
        "position": "absolute",
      }
    }
  >
    <ThemedComponent
      onPress={[Function]}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "rgb(148, 47, 81)",
            "borderRadius": 4,
            "height": 48,
            "minWidth": 164,
          },
          "text": Object {
            "color": "white",
            "fontFamily": "TT Commons",
            "fontSize": 22,
            "fontWeight": "normal",
            "paddingVertical": 16,
          },
        }
      }
      text="Continue"
      upperCase={false}
    />
  </View>
</Container>
`;
